# task-manager

./: .gitignore  CLAUDE.md  README.md  package.json  tsconfig.node.json  vite.config.ts
.claude/: settings.local.json
.worktrees/task-manager/: vite.config.ts
.worktrees/task-manager/src-tauri/capabilities/: default.json
.worktrees/task-manager/src-tauri/icons/: icon.icns
.worktrees/task-manager/src/components/: KanbanColumn.tsx  Layout.tsx  PinInput.tsx  TaskCard.tsx
.worktrees/task-manager/src/db/: database.ts
.worktrees/task-manager/src/i18n/: en.json
.worktrees/task-manager/src/routes/: KanbanBoard.tsx  SettingsPage.tsx
.worktrees/task-manager/src/stores/: useAuthStore.ts  useSettingsStore.ts
.worktrees/task-manager/src/types/: index.ts
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-06-03-task-manager-plan.md
docs/superpowers/specs/: 2026-06-03-task-manager-design.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/components/: CloseDialog.tsx  TaskDrawer.tsx  TopNav.tsx
src/i18n/: en.json  index.ts  zh-CN.json
src/routes/: StatisticsPage.tsx  UnlockPage.tsx
src/stores/: useTaskStore.ts
