[package]
name = "task-manager"
version = "0.1.0"
description = "A local task management desktop app"
authors = ["kindy"]
edition = "2021"

[lib]
name = "task_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
