[package]
name = "task-manager"
version = "0.1.0"
description = "A local task management desktop app"
authors = ["kindy"]
edition = "2021"

[lib]
name = "task_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.16"
rusqlite = { version = "0.32", features = ["bundled"] }
